objects/BLN_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Order__c</fullName>
        <label>Answer Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLN_Question__c</fullName>
        <label>BLN Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>BLN Answers</relationshipLabel>
        <relationshipName>BLN_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANS-{000000}</displayFormat>
        <label>BLN Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>